[refactor] remove commons-lang3 dependency from last extensions
The last two were the mail module and the LDAP security realm.